--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Prebid + GPT Blogger Gadget (test)</title>
+  <title>Prebid + GPT Blogger Gadget (fixed)</title>
   <style>
     /* Simple styles - adjust to your theme as needed */
     .ad-slot { margin: 12px 0; text-align: center; }
@@ -11,155 +11,147 @@
   </style>
 </head>
 <body>
-  <!-- Paste this entire HTML into Layout -> Add a Gadget -> HTML/JavaScript in Blogger (quick test) -->
   <div class="ad-slot">
-    <div id="div-gpt-ad-123456789-0">
-      <!-- GPT will inject the creative here -->
-    </div>
+    <div id="div-gpt-ad-123456789-0"> <!-- GPT will inject the creative here --> </div>
   </div>
 
-  <!-- =========================================
-       WARNING: This uses the "not-for-prod" Prebid CDN for testing only.
-       DO NOT use the not-for-prod Prebid build in production.
-       Build a custom production prebid.js including only needed adapters.
-       ========================================= -->
-
-  <!-- Prebid (testing CDN) -->
-  <script src="https://acdn.adnxs.com/prebid/not-for-prod/prebid.js"></script>
-
-  <!-- Inline prebid-config (previously prebid-config.js) -->
-  <script>
-    // prebid-config (inline)
-    var PREBID_TIMEOUT = 1200; // ms - adjust as needed
-    var pbjs = window.pbjs = window.pbjs || {};
-    pbjs.que = pbjs.que || [];
-    pbjs.logging = true; // set to false in production
-
-    var adUnits = [
-      {
-        code: 'div-gpt-ad-123456789-0',
-        mediaTypes: {
-          banner: {
-            sizes: [[970,250],[728,90],[320,50]]
-          }
-        },
-        bids: [
-          // EXAMPLE bidders - replace with your real bidder params in production
-          { bidder: 'appnexus', params: { placementId: '12345678' } },
-          { bidder: 'rubicon', params: { accountId: '1001', siteId: '12345', zoneId: '67890' } },
-          { bidder: 'openx', params: { unit: '540123456', delDomain: 'delivery.example.com' } }
-        ]
-      }
-    ];
-
-    function requestPrebidBids(adUnits, callback) {
-      pbjs.que.push(function() {
-        try {
-          pbjs.addAdUnits(adUnits);
-          pbjs.requestBids({
-            timeout: PREBID_TIMEOUT,
-            bidsBackHandler: function() {
-              try { pbjs.setTargetingForGPTAsync && pbjs.setTargetingForGPTAsync(); } catch(e){}
-              if (typeof callback === 'function') callback();
-            }
-          });
-        } catch (err) {
-          console.error('Prebid request error', err);
-          // fallback to callback so GPT will still display
-          if (typeof callback === 'function') callback();
-        }
-
-        // Safety fallback: if bidders don't respond in time, continue anyway
-        setTimeout(function() {
-          try { pbjs.setTargetingForGPTAsync && pbjs.setTargetingForGPTAsync(); } catch(e){}
-          if (typeof callback === 'function') callback();
-        }, PREBID_TIMEOUT + 200);
-      });
-    }
-
-    window.requestPrebidBids = requestPrebidBids;
-    window.prebidAdUnits = adUnits;
-  </script>
-
-  <!-- GPT (Google Publisher Tag) -->
+  <!-- Load GPT (required for Google Publisher Tags) -->
   <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js" crossorigin="anonymous"></script>
 
-  <!-- Inline gpt-setup (previously gpt-setup.js) -->
+  <!-- Optional: Prebid testing CDN (defensive load; may be blocked in some environments) -->
   <script>
-    // GPT setup that cooperates with Prebid (inline)
-    window.googletag = window.googletag || {cmd: []};
-    googletag.cmd.push(function() {
-      // responsive size mapping
-      var mapping = googletag.sizeMapping()
-        .addSize([1024, 0], [[970,250],[728,90]])
-        .addSize([768, 0], [[728,90]])
-        .addSize([0, 0], [[320,50]])
-        .build();
-
-      // Replace the ad unit path below with your actual network/ad unit path if you use Ad Manager.
-      // If you are not using Ad Manager & have other flows, adjust accordingly.
-      var slot = googletag.defineSlot('/23322983346/456', [[970,250],[728,90],[320,50]], 'div-gpt-ad-123456789-0')
-        .defineSizeMapping(mapping)
-        .addService(googletag.pubads());
-
-      googletag.pubads().enableSingleRequest();
-      googletag.pubads().collapseEmptyDivs();
-
-      if (googletag.pubads().enableLazyLoad) {
-        googletag.pubads().enableLazyLoad({
-          fetchMarginPercent: 200,  // fetch when 2 viewports away
-          renderMarginPercent: 50,  // render when 0.5 viewports away
-          mobileScaling: 2.0
-        });
-      }
-
-      // Example static targeting - optional
-      googletag.pubads().setTargeting('site', 'blogger_example');
-
-      googletag.enableServices();
-    });
-
-    // Launch Prebid auction then display the GPT slot
     (function() {
-      // If Prebid not present, just display GPT immediately
-      if (!window.requestPrebidBids) {
-        googletag.cmd.push(function() {
-          try { googletag.display('div-gpt-ad-123456789-0'); } catch(e) { console.warn(e); }
+      var s = document.createElement('script');
+      s.src = 'https://acdn.adnxs.com/prebid/not-for-prod/prebid.js';
+      s.async = true;
+      s.onload = function(){ console.info('Prebid test script loaded'); };
+      s.onerror = function(){ console.info('Prebid test script failed to load (this is expected on some hosts)'); };
+      document.head.appendChild(s);
+    })();
+  </script>
+
+  <!-- Inline safe Prebid config (no bidders) -->
+  <script>
+    (function(window){
+      var PREBID_TIMEOUT = 1200;
+      var pbjs = window.pbjs = window.pbjs || {};
+      pbjs.que = pbjs.que || [];
+      pbjs.logging = false;
+
+      var adUnits = [
+        {
+          code: 'div-gpt-ad-123456789-0',
+          mediaTypes: { banner: { sizes: [[970,250],[728,90],[320,50]] } },
+          bids: [] // SAFE: no bidders in test mode to avoid adapter/network errors
+        }
+      ];
+
+      function requestPrebidSafe(callback) {
+        // If pbjs.requestBids isn't available yet, call callback immediately
+        if (!window.pbjs || typeof pbjs.requestBids !== 'function') {
+          console.info('pbjs.requestBids not available; skipping Prebid auction in safe mode');
+          if (typeof callback === 'function') callback();
+          return;
+        }
+
+        pbjs.que.push(function() {
+          try {
+            pbjs.addAdUnits(adUnits);
+            pbjs.requestBids({
+              timeout: PREBID_TIMEOUT,
+              bidsBackHandler: function() {
+                try { if (typeof pbjs.setTargetingForGPTAsync === 'function') pbjs.setTargetingForGPTAsync(); } catch(e){}
+                if (typeof callback === 'function') callback();
+              }
+            });
+          } catch (e) {
+            console.warn('Prebid request failed', e);
+            if (typeof callback === 'function') callback();
+          }
+
+          // Ensure callback fires even if bidders hang
+          setTimeout(function(){ try { if (typeof pbjs.setTargetingForGPTAsync === 'function') pbjs.setTargetingForGPTAsync(); } catch(e){}; if (typeof callback === 'function') callback(); }, PREBID_TIMEOUT + 300);
         });
-        return;
       }
 
-      // Request Prebid bids, then display the slot so GPT sees hb targeting
-      window.requestPrebidBids(window.prebidAdUnits, function() {
-        googletag.cmd.push(function() {
-          try {
-            googletag.display('div-gpt-ad-123456789-0');
-          } catch (e) {
-            // If display fails (already displayed), attempt a targeted refresh
-            try {
-              var slots = googletag.pubads().getSlots() || [];
-              var theSlot = slots.filter(function(s){ return s.getSlotElementId() === 'div-gpt-ad-123456789-0'; })[0];
-              if (theSlot) {
-                googletag.pubads().refresh([theSlot]);
-              }
-            } catch (err) {
-              console.error('GPT display/refresh error', err);
-            }
+      window.requestPrebidSafe = requestPrebidSafe;
+    })(window);
+  </script>
+
+  <!-- GPT setup (very defensive) -->
+  <script>
+    (function(){
+      window.googletag = window.googletag || {cmd: []};
+
+      // Prepare slot definition safely
+      googletag.cmd.push(function(){
+        try {
+          if (typeof googletag.defineSlot !== 'function') {
+            console.warn('googletag.defineSlot not available yet');
+            return;
           }
+
+          var mapping = null;
+          if (typeof googletag.sizeMapping === 'function') {
+            try {
+              mapping = googletag.sizeMapping()
+                .addSize([1024,0], [[970,250],[728,90]])
+                .addSize([768,0], [[728,90]])
+                .addSize([0,0], [[320,50]])
+                .build();
+            } catch(e) { mapping = null; }
+          }
+
+          var slot = googletag.defineSlot('/23322983346/456', [[970,250],[728,90],[320,50]], 'div-gpt-ad-123456789-0');
+          if (slot && mapping && typeof slot.defineSizeMapping === 'function') slot.defineSizeMapping(mapping);
+          if (slot && typeof slot.addService === 'function') slot.addService(googletag.pubads());
+
+          // Configure pubads if available
+          try {
+            if (googletag.pubads) {
+              var pub = googletag.pubads();
+              if (pub) {
+                if (typeof pub.enableSingleRequest === 'function') pub.enableSingleRequest();
+                if (typeof pub.collapseEmptyDivs === 'function') pub.collapseEmptyDivs();
+              }
+            }
+          } catch(e){ console.warn('pubads config failed', e); }
+        } catch (err) {
+          console.error('Error setting up slot', err);
+        }
+      });
+
+      // Run Prebid safe flow, then enableServices and display
+      window.requestPrebidSafe(function(){
+        googletag.cmd.push(function(){
+          try {
+            // Apply targeting from Prebid if available
+            try { if (window.pbjs && typeof pbjs.setTargetingForGPTAsync === 'function') pbjs.setTargetingForGPTAsync(); } catch(e){ console.warn('setTargetingForGPTAsync error', e); }
+
+            // Enable lazy load if available
+            try {
+              var pub = googletag.pubads && googletag.pubads();
+              if (pub && typeof pub.enableLazyLoad === 'function') pub.enableLazyLoad({fetchMarginPercent:200, renderMarginPercent:50, mobileScaling:2.0});
+            } catch(e){ /* ignore */ }
+
+            // Enable services only once
+            try { if (typeof googletag.enableServices === 'function') googletag.enableServices(); } catch(e){ console.warn('enableServices failed', e); }
+
+            // Finally display the slot
+            try {
+              if (typeof googletag.display === 'function') {
+                googletag.display('div-gpt-ad-123456789-0');
+              } else {
+                console.warn('googletag.display not available');
+              }
+            } catch(e) {
+              console.warn('display failed', e);
+            }
+          } catch(e) { console.error('Error in final GPT flow', e); }
         });
       });
     })();
   </script>
 
-  <!-- Debug helpers (optional); remove in production -->
-  <script>
-    // Quick console helpers for debugging after page loads
-    window.addEventListener('load', function() {
-      try {
-        console.log('pbjs targeting for slot:', pbjs && pbjs.getAdserverTargetingForAdUnitCode ? pbjs.getAdserverTargetingForAdUnitCode('div-gpt-ad-123456789-0') : 'pbjs not available or no targeting yet');
-        console.log('Open publisher console with googletag.openConsole() to inspect slots (if allowed).');
-      } catch (e) {}
-    });
-  </script>
 </body>
 </html>
